created SVC model and did random sampling

--- a/Employee-Attrition.ipynb
+++ b/Employee-Attrition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "id": "15d22e1f",
    "metadata": {},
    "outputs": [],
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "66332c26",
    "metadata": {},
    "outputs": [
@@ -586,7 +586,7 @@
        "False"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1df8cef4",
    "metadata": {},
    "outputs": [],
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "21352f32",
    "metadata": {},
    "outputs": [],
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "693aa5fb",
    "metadata": {},
    "outputs": [],
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "7e36761e",
    "metadata": {},
    "outputs": [],
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "4205311b",
    "metadata": {},
    "outputs": [],
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "340434f7",
    "metadata": {},
    "outputs": [
@@ -1202,7 +1202,7 @@
        "Name: MaritalStatus, Length: 1470, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "80426396",
    "metadata": {},
    "outputs": [],
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "57e5d03d",
    "metadata": {},
    "outputs": [],
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "4f8c8a80",
    "metadata": {},
    "outputs": [],
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "0d10a1af",
    "metadata": {},
    "outputs": [
@@ -1253,7 +1253,7 @@
        "(1470, 39)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "46d03477",
    "metadata": {},
    "outputs": [
@@ -1275,7 +1275,7 @@
        "(1470, 35)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "29c5231b",
    "metadata": {},
    "outputs": [],
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "287f6403",
    "metadata": {},
    "outputs": [
@@ -1503,7 +1503,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1514,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "31095e15",
    "metadata": {},
    "outputs": [],
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "735d1df5",
    "metadata": {},
    "outputs": [],
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "dfd6d7d9",
    "metadata": {},
    "outputs": [
@@ -1747,7 +1747,7 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1758,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "28e02fb7",
    "metadata": {},
    "outputs": [
@@ -1768,7 +1768,7 @@
        "(1470, 37)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1780,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "63f761b8",
    "metadata": {},
    "outputs": [],
@@ -1791,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "a2f3ac58",
    "metadata": {},
    "outputs": [],
@@ -2220,8 +2220,378 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "id": "9d2b9911",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forest_clf = RandomForestClassifier(bootstrap = False, max_depth = 20, max_features = 'auto', \n",
+    "                       min_samples_leaf = 4, min_samples_split = 5, n_estimators = 50).fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "ffac7273",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forest_y_predicted = forest_clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "9fc2ee03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy score is 0.875\n",
+      "accuracy score is \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.88      0.99      0.93       310\n",
+      "           1       0.88      0.24      0.38        58\n",
+      "\n",
+      "    accuracy                           0.88       368\n",
+      "   macro avg       0.88      0.62      0.65       368\n",
+      "weighted avg       0.88      0.88      0.84       368\n",
+      "\n",
+      "None\n",
+      "confusion matrix is\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[308,   2],\n",
+       "       [ 44,  14]], dtype=int64)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"accuracy score is\", accuracy_score(y_test, forest_y_predicted))\n",
+    "print(print(\"accuracy score is \\n\", classification_report(y_test, forest_y_predicted)))\n",
+    "print(\"confusion matrix is\") \n",
+    "confusion_matrix(y_test, forest_y_predicted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "1cee910e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "fb67f0bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svc = SVC().fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a5aff023",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_predicted = svc.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "2ec2635c",
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy score is 0.842391304347826\n",
+      "accuracy score is \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.84      1.00      0.91       310\n",
+      "           1       0.00      0.00      0.00        58\n",
+      "\n",
+      "    accuracy                           0.84       368\n",
+      "   macro avg       0.42      0.50      0.46       368\n",
+      "weighted avg       0.71      0.84      0.77       368\n",
+      "\n",
+      "None\n",
+      "confusion matrix is\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\chetan\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\chetan\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\users\\chetan\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[310,   0],\n",
+       "       [ 58,   0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"accuracy score is\", accuracy_score(y_test, y_predicted))\n",
+    "print(print(\"accuracy score is \\n\", classification_report(y_test, y_predicted)))\n",
+    "print(\"confusion matrix is\") \n",
+    "confusion_matrix(y_test, y_predicted)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e68f7f7",
+   "metadata": {},
+   "source": [
+    "## for better accuracy we can do oversampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "4e64ac8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from imblearn.over_sampling import SMOTE\n",
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "969be8a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oversample = SMOTE()\n",
+    "X_smote, y_smote = oversample.fit_resample(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "01e6136e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((2466, 36), (2466,))"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_smote.shape, y_smote.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "628ab7ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before ovesampling  Counter({0: 1233, 1: 237})\n",
+      "After Oversampling  Counter({1: 1233, 0: 1233})\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Before ovesampling \",Counter(y))\n",
+    "print(\"After Oversampling \",Counter(y_smote))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "870259c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_smote, X_test_smote, y_train_smote, y_test_smote = train_test_split(X_smote, y_smote, test_size=0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "99d57aa0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = {'C': [0.1, 1, 10, 100, 1000], \n",
+    "              'gamma': [1, 0.1, 0.01, 0.001, 0.0001],\n",
+    "              'kernel': ['rbf']} "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "14f79830",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 25 candidates, totalling 125 fits\n"
+     ]
+    }
+   ],
+   "source": [
+    "grid = GridSearchCV(SVC(), param_grid, cv =5 ,n_jobs=-1, verbose = 1).fit(X_train_smote, y_train_smote)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "8f4ebb07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7571654581410678"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid.best_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "4518ab64",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=10, gamma=0.0001)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "e25577f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svc = SVC(C=10, gamma=0.0001).fit(X_train_smote, y_train_smote)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "a29b65ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_predicted_smote = svc.predict(X_test_smote)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "9461eed8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy score is 0.7893030794165316\n",
+      "accuracy score is \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.73      0.96      0.83       328\n",
+      "           1       0.93      0.59      0.72       289\n",
+      "\n",
+      "    accuracy                           0.79       617\n",
+      "   macro avg       0.83      0.78      0.78       617\n",
+      "weighted avg       0.82      0.79      0.78       617\n",
+      "\n",
+      "None\n",
+      "confusion matrix is\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[316,  12],\n",
+       "       [118, 171]], dtype=int64)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"accuracy score is\", accuracy_score(y_test_smote, y_predicted_smote))\n",
+    "print(print(\"accuracy score is \\n\", classification_report(y_test_smote, y_predicted_smote)))\n",
+    "print(\"confusion matrix is\") \n",
+    "confusion_matrix(y_test_smote, y_predicted_smote)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2407160",
    "metadata": {},
    "outputs": [],
    "source": []
