logistic regression classifier created

--- a/Employee-Attrition.ipynb
+++ b/Employee-Attrition.ipynb
@@ -1801,6 +1801,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f5a08d0c",
+   "metadata": {},
+   "source": [
+    "## using randomforest classifier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 205,
    "id": "f8a78b97",
@@ -1818,7 +1826,6 @@
     }
    ],
    "source": [
-    "# using randomforest classifier\n",
     "forest = RandomForestClassifier(n_estimators=25, criterion='entropy', random_state=0)\n",
     "forest.fit(X_train, y_train)"
    ]
@@ -1884,6 +1891,147 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5ea70b35",
+   "metadata": {},
+   "source": [
+    "## hyper parameter tuning of randomforest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "77782d64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 1296 candidates, totalling 6480 fits\n"
+     ]
+    }
+   ],
+   "source": [
+    "forest_param_grid = {'bootstrap': [True, False],\n",
+    "     'max_depth': [10, 20, 30, 40, 50, 60],\n",
+    "     'max_features': ['auto', 'sqrt'],\n",
+    "     'min_samples_leaf': [1, 2, 4],\n",
+    "     'min_samples_split': [2, 5, 10],\n",
+    "     'n_estimators': [30,40,50,90,100,130]}\n",
+    "    \n",
+    "forest = RandomForestClassifier()\n",
+    "forest_tune = GridSearchCV(forest, forest_param_grid, cv=5, n_jobs=-1, verbose=1).fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "2ae96866",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.863874948580831\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'bootstrap': False,\n",
+       " 'max_depth': 20,\n",
+       " 'max_features': 'auto',\n",
+       " 'min_samples_leaf': 4,\n",
+       " 'min_samples_split': 5,\n",
+       " 'n_estimators': 50}"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(forest_tune.best_score_)\n",
+    "forest_tune.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "0a422132",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forest_clf = RandomForestClassifier(bootstrap = False, max_depth = 20, max_features = 'auto', \n",
+    "                       min_samples_leaf = 4, min_samples_split = 5, n_estimators = 50).fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "85c1cf56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forest_y_predicted = forest_clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "a0243852",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy score is 0.875\n",
+      "accuracy score is \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.88      0.99      0.93       310\n",
+      "           1       0.88      0.24      0.38        58\n",
+      "\n",
+      "    accuracy                           0.88       368\n",
+      "   macro avg       0.88      0.62      0.65       368\n",
+      "weighted avg       0.88      0.88      0.84       368\n",
+      "\n",
+      "None\n",
+      "confusion matrix is\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[308,   2],\n",
+       "       [ 44,  14]], dtype=int64)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"accuracy score is\", accuracy_score(y_test, forest_y_predicted))\n",
+    "print(print(\"accuracy score is \\n\", classification_report(y_test, forest_y_predicted)))\n",
+    "print(\"confusion matrix is\") \n",
+    "confusion_matrix(y_test, forest_y_predicted)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9004eff5",
+   "metadata": {},
+   "source": [
+    "## using xgboost classifier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 223,
    "id": "50fd1f7b",
@@ -1915,7 +2063,6 @@
     }
    ],
    "source": [
-    "## xgboost classifier\n",
     "boost = XGBClassifier(n_estimators=25)\n",
     "boost.fit(X_train, y_train)"
    ]
@@ -2152,140 +2299,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ea70b35",
+   "id": "20bef648",
    "metadata": {},
    "source": [
-    "## hyper parameter tuning of randomforest"
+    "## using Support Vector Classifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "77782d64",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 5 folds for each of 1296 candidates, totalling 6480 fits\n"
-     ]
-    }
-   ],
-   "source": [
-    "forest_param_grid = {'bootstrap': [True, False],\n",
-    "     'max_depth': [10, 20, 30, 40, 50, 60],\n",
-    "     'max_features': ['auto', 'sqrt'],\n",
-    "     'min_samples_leaf': [1, 2, 4],\n",
-    "     'min_samples_split': [2, 5, 10],\n",
-    "     'n_estimators': [30,40,50,90,100,130]}\n",
-    "    \n",
-    "forest = RandomForestClassifier()\n",
-    "forest_tune = GridSearchCV(forest, forest_param_grid, cv=5, n_jobs=-1, verbose=1).fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "id": "2ae96866",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.863874948580831\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'bootstrap': False,\n",
-       " 'max_depth': 20,\n",
-       " 'max_features': 'auto',\n",
-       " 'min_samples_leaf': 4,\n",
-       " 'min_samples_split': 5,\n",
-       " 'n_estimators': 50}"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(forest_tune.best_score_)\n",
-    "forest_tune.best_params_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "9d2b9911",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "forest_clf = RandomForestClassifier(bootstrap = False, max_depth = 20, max_features = 'auto', \n",
-    "                       min_samples_leaf = 4, min_samples_split = 5, n_estimators = 50).fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "ffac7273",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "forest_y_predicted = forest_clf.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "9fc2ee03",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "accuracy score is 0.875\n",
-      "accuracy score is \n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.88      0.99      0.93       310\n",
-      "           1       0.88      0.24      0.38        58\n",
-      "\n",
-      "    accuracy                           0.88       368\n",
-      "   macro avg       0.88      0.62      0.65       368\n",
-      "weighted avg       0.88      0.88      0.84       368\n",
-      "\n",
-      "None\n",
-      "confusion matrix is\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[308,   2],\n",
-       "       [ 44,  14]], dtype=int64)"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(\"accuracy score is\", accuracy_score(y_test, forest_y_predicted))\n",
-    "print(print(\"accuracy score is \\n\", classification_report(y_test, forest_y_predicted)))\n",
-    "print(\"confusion matrix is\") \n",
-    "confusion_matrix(y_test, forest_y_predicted)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 74,
    "id": "1cee910e",
    "metadata": {},
    "outputs": [],
@@ -2295,8 +2317,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "fb67f0bb",
+   "execution_count": 75,
+   "id": "fbbd61fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2305,8 +2327,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "a5aff023",
+   "execution_count": 76,
+   "id": "331187ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2315,11 +2337,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "2ec2635c",
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 77,
+   "id": "c178eb0c",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -2359,7 +2379,7 @@
        "       [ 58,   0]], dtype=int64)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2373,7 +2393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e68f7f7",
+   "id": "38bcbcdb",
    "metadata": {},
    "source": [
     "## for better accuracy we can do oversampling"
@@ -2382,7 +2402,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "4e64ac8f",
+   "id": "8b4fd371",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2393,7 +2413,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "969be8a0",
+   "id": "a05d2b28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2404,7 +2424,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "01e6136e",
+   "id": "ba9da35d",
    "metadata": {},
    "outputs": [
     {
@@ -2425,7 +2445,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "628ab7ca",
+   "id": "a04ff33e",
    "metadata": {},
    "outputs": [
     {
@@ -2445,7 +2465,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "870259c5",
+   "id": "cd102020",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2455,7 +2475,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "99d57aa0",
+   "id": "49ca7513",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2467,7 +2487,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "14f79830",
+   "id": "c235d358",
    "metadata": {},
    "outputs": [
     {
@@ -2485,7 +2505,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "8f4ebb07",
+   "id": "b1573067",
    "metadata": {},
    "outputs": [
     {
@@ -2506,7 +2526,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "4518ab64",
+   "id": "94230509",
    "metadata": {},
    "outputs": [
     {
@@ -2527,7 +2547,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "e25577f1",
+   "id": "d1f5fbf2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2537,7 +2557,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "a29b65ad",
+   "id": "b19b3c14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2547,7 +2567,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "9461eed8",
+   "id": "ef591bbc",
    "metadata": {},
    "outputs": [
     {
@@ -2589,9 +2609,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a5356df2",
+   "metadata": {},
+   "source": [
+    "## using logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "ec0f4669",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "fe8ac438",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\chetan\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:765: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+     ]
+    }
+   ],
+   "source": [
+    "log_reg = LogisticRegression().fit(X_train_smote, y_train_smote)\n",
+    "log_y_predicted = log_reg.predict(X_test_smote)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "404d681f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy score is 0.6871961102106969\n",
+      "accuracy score is \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.74      0.64      0.69       328\n",
+      "           1       0.65      0.74      0.69       289\n",
+      "\n",
+      "    accuracy                           0.69       617\n",
+      "   macro avg       0.69      0.69      0.69       617\n",
+      "weighted avg       0.69      0.69      0.69       617\n",
+      "\n",
+      "None\n",
+      "confusion matrix is\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[211, 117],\n",
+       "       [ 76, 213]], dtype=int64)"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"accuracy score is\", accuracy_score(y_test_smote, log_y_predicted))\n",
+    "print(print(\"accuracy score is \\n\", classification_report(y_test_smote, log_y_predicted)))\n",
+    "print(\"confusion matrix is\") \n",
+    "confusion_matrix(y_test_smote, log_y_predicted)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59abcb31",
+   "metadata": {},
+   "source": [
+    "# Xgboost And Random Forest had better accuracy then other models but other factors we need to take consider are precision and recall which can be considered based on domain knowledge."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2407160",
+   "id": "ff4ebaff",
    "metadata": {},
    "outputs": [],
    "source": []
